--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Front-end foundations: Responsive images</title>
+    <meta name="viewport" content="width=device-width" />
+    <title>Front-end foundations: HTML forms</title>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
       rel="stylesheet"
@@ -11,56 +11,100 @@
     />
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-<body>
+
+  <body>
     <main>
-      <h1>Important Page Heading</h1>
-      <section>
-        <h2>Group #1 Heading</h2>
-        <!-- Group #1 with 3 items -->
-        <div class="group">
-          <div class="item">
-            <img src="images/watermelon1.jpg" alt="" />
+      <form>
+        <fieldset>
+          <legend>Shipping Information</legend>
+          <div>
+            <label for="name">Full Name:</label>
+            <input
+              id="name"
+              type="text"
+              name="name"
+              placeholder="Enter your full name"
+            />
           </div>
-          <div class="item">
-            <img src="images/watermelon2.jpg" alt="" />
+          <div>
+            <label for="location">Zipcode:</label>
+            <input
+              id="location"
+              type="text"
+              name="zipcode"
+              autofocus="on"
+              maxlength="5"
+              required
+            />
           </div>
-          <div class="item">
-            <img src="images/watermelon3.jpg" alt="" />
+        </fieldset>
+        <div>
+          <label for="form-message">Your message:</label>
+          <textarea
+            id="form-message"
+            name="message"
+            autofocus="on"
+            required
+            maxlength="200"
+            placeholder="How can I help you?"
+          ></textarea>
+        </div>
+        <div>
+          <label for="password">Password:</label>
+          <input id="password" type="password" name="password" minlength="8" />
+        </div>
+        <div>
+          <h2>Favorite Color:</h2>
+          <div>
+            <input id="red" name="color" type="radio" value="red" />
+            <label for="red">Red</label>
+          </div>
+          <div>
+            <input id="blue" name="color" type="radio" value="blue" />
+            <label for="blue">Blue</label>
+          </div>
+          <div>
+            <input id="white" name="color" type="radio" value="white" />
+            <label for="white">White</label>
           </div>
         </div>
-      </section>
-
-      <section>
-        <h2>Group #2 Heading</h2>
-        <!-- Group #2 with 2 items -->
-        <div class="group">
-          <div class="item">
-            <img src="images/pineapple.jpg" alt="" />
+        <div>
+          <h2>Choose your monster's features:</h2>
+          <div>
+            <input name="scales" type="checkbox" id="scales" />
+            <label for="scales">Scales</label>
           </div>
-          <div class="item">
-            <img src="images/icecream.jpg" alt="" />
+          <div>
+            <input name="horns" type="checkbox" id="horns" />
+            <label for="horns">Horns</label>
           </div>
-        </div>
-      </section>
-
-      <section>
-        <h2>Group #3 Heading</h2>
-        <!-- Group #3 with 4 items -->
-        <div class="group">
-          <div class="item">
-            <img src="images/water1.jpg" alt="" />
-          </div>
-          <div class="item">
-            <img src="images/water2.jpg" alt="" />
-          </div>
-          <div class="item">
-            <img src="images/water3.jpg" alt="" />
-          </div>
-          <div class="item">
-            <img src="images/water4.jpg" alt="" />
+          <div>
+            <input name="wings" type="checkbox" id="wings" />
+            <label for="wings">Wings</label>
           </div>
         </div>
-      </section>
+        <div>
+          <h2>Choose a font:</h2>
+          <select name="fonts" size="1">
+            <option value="arial">Arial</option>
+            <option value="times">Times New Roman</option>
+            <option value="comicsans">Comic Sans</option>
+            <option value="papyrus">Papyrus</option>
+          </select>
+        </div>
+        <div>
+          <label for="phone">Phone #:</label>
+          <input
+            id="phone"
+            type="text"
+            name="phone"
+            pattern="\d{3}[\-]\d{3}[\-]\d{4}"
+            placeholder="xxx-xxx-xxxx"
+          />
+        </div>
+        <button type="submit">Submit</button>
+        <button type="reset">Reset</button>
+      </form>
     </main>
   </body>
 </html>
